fixed hr overlap + text align centered h2,h3

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,6 +9,7 @@ h3 {
   font-family: 'Roboto Slab', serif;
   color: ivory;
   text-shadow: 1px 1px 5px black;
+  text-align: center;
 }
 a {
   font-family: 'Roboto Slab', serif;
@@ -34,4 +35,8 @@ body {
 }
 .text-shadow {
   text-shadow: 1px 1px 5px black;
+}
+.brown-container {
+  background-color: var(--light-brown);
+  padding: 1rem;
 }
